--- a/index.ipynb
+++ b/index.ipynb
@@ -175,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "boston_features = pd.DataFrame(boston[''])"
+    "boston_features = pd.DataFrame(boston['data'], column)"
    ]
   },
   {
