Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -171,11 +171,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "boston_features = pd.DataFrame(boston['data'], columns = boston[''])"
+    "boston_features = pd.DataFrame(boston['data'], columns = boston['feature_names'])"
    ]
   },
   {
@@ -184,7 +184,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#inspect the first few rows"
+    "#inspect the first few rows\n",
+    "data."
    ]
   },
   {
