Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -363,7 +363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "boston_target = None\n",
+    "boston_features = pd.DataFrame(boston['data'], columns = boston['feature_names'])\n",
     "\n",
     "#inspect the first few rows\n"
    ]
