Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -363,7 +363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "boston_features = pd.DataFrame(boston['targer'], columns = 'MEDB')\n",
+    "boston_features = pd.DataFrame(boston['targer'], columns = 'MEDV')\n",
     "\n",
     "#inspect the first few rows\n"
    ]
