Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -365,7 +365,8 @@
    "source": [
     "boston_features = pd.DataFrame(boston['targer'], columns = 'MEDV')\n",
     "\n",
-    "#inspect the first few rows\n"
+    "#inspect the first few rows\n",
+    "boston_featuers"
    ]
   },
   {
