Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -427,7 +427,7 @@
    ],
    "source": [
     "boston_features = pd.DataFrame(boston['target'])\n",
-    "\n",
+    "boston_features.columns = ''\n",
     "#inspect the first few rows\n",
     "boston_features.head()"
    ]
