Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
+       "      <th>MEDV</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -412,7 +412,7 @@
        "</div>"
       ],
       "text/plain": [
-       "      0\n",
+       "   MEDV\n",
        "0  24.0\n",
        "1  21.6\n",
        "2  34.7\n",
@@ -420,13 +420,13 @@
        "4  36.2"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "boston_features = pd.DataFrame(boston['target'])\n",
+    "boston_features = pd.DataFrame(boston['target'], columns = ['MEDV'])\n",
     "\n",
     "#inspect the first few rows\n",
     "boston_features.head()"
