Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -426,7 +426,7 @@
     }
    ],
    "source": [
-    "boston_features = pd.DataFrame(boston['target'], columns = ['MEDV'])\n",
+    "boston_target = pd.DataFrame(boston['target'], columns = ['MEDV'])\n",
     "\n",
     "#inspect the first few rows\n",
     "boston_features.head()"
