--- a/index.ipynb
+++ b/index.ipynb
@@ -619,7 +619,8 @@
    "outputs": [],
    "source": [
     "# code here\n",
-    "# code here\n"
+    "# code here\n",
+    "boston_df.describe()"
    ]
   },
   {
