--- a/index.ipynb
+++ b/index.ipynb
@@ -888,6 +888,7 @@
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplot\n",
     "\n",
     "# create scatter plots\n",
     "fig, axes = plt.subplots(nrows=1, ncols=4, figsize=(16,3))\n",
