--- a/index.ipynb
+++ b/index.ipynb
@@ -1065,12 +1065,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    (250, 300]\n",
+       "1      (0, 250]\n",
+       "2      (0, 250]\n",
+       "3      (0, 250]\n",
+       "4      (0, 250]\n",
+       "Name: TAX, dtype: category\n",
+       "Categories (5, interval[int64]): [(0, 250], (250, 300], (300, 360], (360, 460], (460, 712]]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# repeat everything for \"TAX\"\n",
+    "bins = [0, 250, 300, 360, 460, 712]\n",
+    "# use pd.cut\n",
+    "bins_tax = pd.cut(boston_df['TAX'], bins)\n",
+    "# using pd.cut returns unordered categories. Transform this to ordered categories.\n",
+    "bins_tax = bins_tax.cat.as_unordered()\n",
+    "bins_tax.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# repeat everything for \"TAX\""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
