Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1129,10 +1129,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "boston_df[\"TAX\"]=bins_tax"
+   ]
   },
   {
    "cell_type": "markdown",
