Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1298,7 +1298,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# inspect first few columns"
+    "# inspect first few columns\n",
+    "boston_df = pd.concat([boston_df, rad_dummy, tax_dummy], axis=1)\n",
+    "boston_df.head()"
    ]
   },
   {
